cabal-version:      1.18
name:               lame
version:            0.2.0
license:            BSD3
license-file:       LICENSE.md
maintainer:         Mark Karpov <markkarpov92@gmail.com>
author:             Mark Karpov <markkarpov92@gmail.com>
tested-with:        ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.1
homepage:           https://github.com/mrkkrp/lame
bug-reports:        https://github.com/mrkkrp/lame/issues
synopsis:           Fairly complete high-level binding to LAME encoder
description:        Fairly complete high-level binding to LAME encoder.
category:           Codec, Audio
build-type:         Simple
data-files:         audio-samples/*.wav
extra-source-files: cbits/*.h
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/lame.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Codec.Audio.LAME
    c-sources:        cbits/helpers.c
    other-modules:    Codec.Audio.LAME.Internal
    default-language: Haskell2010
    extra-libraries:  mp3lame
    include-dirs:     cbits
    build-depends:
        base >=4.12 && <5.0,
        bytestring >=0.2 && <0.11,
        directory >=1.2.2 && <1.4,
        exceptions >=0.6 && <0.11,
        filepath >=1.2 && <1.5,
        text >=0.2 && <1.3,
        transformers >=0.4 && <0.6,
        wave >=0.1.2 && <0.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:    Codec.Audio.LAMESpec
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        directory >=1.2.2 && <1.4,
        filepath >=1.2 && <1.5,
        hspec >=2.0 && <3.0,
        htaglib >=1.0 && <1.3,
        lame -any,
        temporary >=1.1 && <1.4,
        text >=0.2 && <1.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
